# agent6

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONFIG.md  README.md  SECURITY.md  STATE_MACHINES.md  agent6.example.toml  hatch_build.py  pyproject.toml  tach.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  ci.yml  pages.yml  pypi.yml
bench/: aggregate_overnight_full.py  compare.py  quality.py  results.md  run_bench.sh  run_bench_extreme.sh  run_bench_hard.sh  run_bench_megaextreme.sh  run_bench_tier5.sh  run_head_to_head.sh  run_overnight_full.sh  run_overnight_smoke.sh
bench/agents/: .gitignore  README.md  run_all.sh  run_one.sh
bench/coreagent/: .gitignore  COMPACTION_RESEARCH.md  FINDINGS.md  README.md  run.py  stats.py
bench/coreagent/prompts/: base_rendered.md  index_irrelevant.md  moose.md  moose_top.md  padding_neutral.md  skill_debug.md  terse_line.md  terse_ruleset.md
bench/coreagent/results/: bootstrap1-mistral.jsonl  bootstrap1-qwen.jsonl  canary0-mistral.jsonl  canary0-qwen.jsonl  canary1-mistral.jsonl  canary1-qwen.jsonl  compaction_ab.jsonl  conf1-mistral.jsonl  eventflow1-haiku.jsonl  eventflow1-mistral.jsonl  eventflow1-qwen.jsonl  eventflow3-haiku.jsonl  eventflow3-mistral.jsonl  eventflow3-qwen.jsonl  gemma_validate.jsonl  guard2-mistral-eventflow.jsonl  guard2-mistral-textkit.jsonl  guardstop1-mistral.jsonl  h2-mistral.jsonl  h2-qwen.jsonl  h3b-mistral.jsonl  haiku_decompose.jsonl  mistral_deep.jsonl  needle_ab.jsonl  screen1-mistral.jsonl  screen1-qwen.jsonl  screen_q36.jsonl  specrecheck1-haiku.jsonl  specrecheck1-mistral.jsonl  specrecheck1-qwen-cost.jsonl  specrecheck1-qwen.jsonl  specrecheck2-haiku.jsonl  specrecheck2-mistral.jsonl  specrecheck2-qwen-cost.jsonl  specrecheck2-qwen.jsonl  spot-glm.jsonl  spot-kimi.jsonl  spot2-glm.jsonl  spot2-kimi.jsonl  weakscreen2.jsonl
bench/longhorizon/: FINDINGS.md  README.md  run.py  run_waves.sh  stats.py
bench/longhorizon/results/: dep1-mistral.jsonl  gist1-qwen.jsonl  kimi-gist.jsonl  lhreg-master.jsonl  lhreg-tip.jsonl  mem1-kimi.jsonl  mem1-qwen.jsonl  mem2-qwen.jsonl  mem3-qwen.jsonl  mem4-haiku.jsonl  mem4-sonnet.jsonl  sb-haiku.jsonl  sb-sonnet-fixed.jsonl  sb-sonnet.jsonl  smoke1.jsonl  smoke2.jsonl  wave1-qwen.jsonl  wave2-qwen.jsonl
bench/machine/: README.md  run_create_bench.sh
bench/machines/: README.md
bench/machines/_create-bench/: .gitignore  README.md  results.jsonl  run.sh
bench/machines/_invalid/: check_errors.sh
bench/machines/code-fixer/: code-fixer.asm.toml  run.sh
bench/machines/hello/: hello.asm.toml  run.sh
bench/machines/multi-model-council/: council.asm.toml  run.sh
bench/perf/: README.md  run_perf.sh  run_perf_claude.sh  run_perf_claude_n.sh  run_perf_n.sh  run_perf_openrouter.sh  run_perf_smoke.sh  run_perf_smoke_claude.sh  run_perf_smoke_n.sh  score.sh  summarize.sh  summarize_samples.py
bench/realworld/: README.md  run_realworld.sh  run_realworld_claude.sh  summarize.py
bench/review/: README.md
bench/swebench/: FINDINGS.md  in_container.sh  run_sweep.py  sample_50.json  score.py
bench/sweep/: README.md  report.md  run_sweep.py  stats.py
docs/: CNAME  architecture.md  config.md  data-contracts.md  gen_contracts.py  getting-started.md  index.md  installation.md  mkdocs.yml  security.md  state-machines.md  tour.md  web.md
docs/assets/: extra.css
docs/design/: adversarial-review-panel.md
docs/screenshots/: .gitignore  README.md  build_fixtures.py  cli_demo.sh  cli_demo.tape  generate.sh  keystroke_overlay.py  llm_proxy.py  machine_demo.sh  machine_demo.tape  make_cover.py  reel.tape  seed.py  tour.tape  tui_snapshot.py  web_demo.py  web_demo.sh  web_machine_demo.sh
jail/: Cargo.toml
jail/src/: main.rs
packaging/apparmor/: agent6-jail
src/agent6/: __init__.py  budget.py  cli.py  config.py  config_fix.py  config_io.py  config_layer.py  detect.py  directive.py  events.py  git_ops.py  init.py  mcp_server.py  memory.py  models.py  models_cache.py  paths.py  portable.py  pricing.py  run_id.py  secrets.py  transcript_render.py  types.py  verify_infer.py
tests/: __init__.py  conftest.py
tests/integration/: test_alignment_workflow.py  test_curator_ipc.py  test_egress_broker.py  test_mcp_server_stdio.py  test_plan_mode.py  test_profile_dispatch.py  test_resume_diff.py
tests/sandbox/: test_host_spawn.py  test_jail_smoke.py  test_landlock_probe.py
tests/security/: test_config_show_no_secrets.py  test_prompt_injection.py  test_subprocess_allowlist.py
tests/tui/: test_config_page.py  test_conversation.py  test_conversation_copy.py  test_home.py  test_logview.py  test_machines.py  test_menu_audit.py  test_settings.py  test_spawn.py  test_theme.py  test_tui_headless.py
tests/ui/: test_config_page.py  test_conversation.py  test_home.py  test_logview.py  test_machines.py  test_menu_audit.py  test_settings.py  test_spawn.py  test_theme.py  test_tui_headless.py
tests/unit/: test_alignment.py  test_anthropic_streaming.py  test_anthropic_thinking.py  test_approval_clear_pending_bugfix.py  test_ask_context.py  test_bar.py  test_bench_stats.py  test_branch_from.py  test_budget.py  test_budget_usd_clamp_bugfix.py  test_budget_usd_meter.py  test_cache_breakpoints.py  test_check_config_fix.py  test_cli_auto_merge.py  test_cli_check_sandbox.py  test_cli_check_summary.py  test_cli_common_helpers.py  test_cli_config_commands.py  test_cli_connect_model.py  test_cli_continue.py  test_cli_entry.py  test_cli_git_setup.py  test_cli_history_graph.py  test_cli_landlock.py  test_cli_parser_config.py  test_cli_parser_help.py  test_cli_plan.py  test_cli_providers.py  test_cli_runs_graph.py  test_cli_runs_list.py  test_cli_runs_merge.py  test_cli_runs_prune.py  test_cli_runs_stop.py  test_cli_system.py  test_cli_tui.py  test_clipboard.py  test_co_change_pairs.py  test_code_index.py  test_code_review.py  test_commit_message.py  (+163 more)
tests/web/: test_web_actions.py  test_web_config.py  test_web_model.py  test_web_page.py  test_web_server.py
vscode/: README.md  package.json  tsconfig.json
vscode/src/: extension.ts  paths.ts
(+483 files in other folders)
