[project]
name = "agent6"
dynamic = ["version"]
description = "Opinionated, sandboxed Python coding agent."
readme = "README.md"
urls = { "Homepage" = "https://github.com/elesiuta/agent6" }
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Eric Lesiuta" }]
dependencies = [
    "pydantic>=2.7,<3",
    "httpx>=0.27,<1",
    "argcomplete>=3,<4",
]

[project.optional-dependencies]
tui = [
    "textual>=0.86",
]

[project.scripts]
agent6 = "agent6.cli:main"
agent6-curator = "agent6.graph.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
# Single source of truth: src/agent6/__init__.py's `__version__`.
path = "src/agent6/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agent6"]
# The compiled jail binary is dropped here by hatch_build.py during the
# wheel build. It lives in .gitignore, so we have to list it explicitly
# as an artifact for hatchling to include it in the wheel.
artifacts = ["src/agent6/sandbox/_bin/agent6-jail"]

# Build the Rust `agent6-jail` binary as a side effect of building the
# wheel and bundle it inside the wheel under agent6/sandbox/_bin/. A plain
# `uv sync` (editable install) or `uv build` (release) therefore produces a
# self-contained install — no separate `cargo build` step required. The
# hook degrades gracefully when cargo is not on PATH (the resulting wheel
# is pure-Python and `agent6 check-sandbox` tells the user to build the
# binary themselves). For PyPI distribution, run the build inside a
# manylinux container (e.g. cibuildwheel) so the bundled binary links
# against an old enough glibc.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
# The Rust crate sources ship in the sdist so a downstream consumer can build
# the jail from source. The compiled binary itself is never embedded.
include = [
    "src/agent6",
    "jail/Cargo.toml",
    "jail/Cargo.lock",
    "jail/src",
    "hatch_build.py",
    "README.md",
    "SECURITY.md",
    "AGENTS.md",
    "agent6.example.toml",
    "tach.toml",
    "LICENSE",
]
# Never ship a built binary inside the sdist; the build hook regenerates it.
exclude = [
    "src/agent6/sandbox/_bin",
]

[dependency-groups]
dev = [
    "pyright>=1.1.380",
    "ruff>=0.6",
    "tach>=0.20",
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle / pyflakes
    "I",                  # isort
    "B",                  # bugbear
    "UP",                 # pyupgrade
    "SIM",                # simplify
    "RUF",                # ruff-specific
    "TID",                # tidy imports
    "PL",                 # pylint subset
    "PTH",                # use pathlib
    "S",                  # bandit
]
ignore = [
    "PLR0913",  # too many args — fine in our typed APIs
    "S101",     # asserts allowed
    "S603",     # subprocess: we audit every call site
    "S607",     # subprocess partial path: we use absolute paths
    "PLR2004",  # magic-value comparisons — noisy in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR2004", "PLR0915", "PLC0415", "B017"]

[tool.pyright]
include = ["src", "tests"]
exclude = [
    # The textual TUI is an optional dependency. We don't install textual in
    # the dev/CI env (it adds ~50 transitive deps), so pyright can't resolve
    # its imports here. The module is installed by `pip install 'agent6[tui]'`
    # and exercised end-to-end by humans; the pure-Python sibling modules
    # (state.py, tail.py, approval.py) carry the unit-test coverage.
    "src/agent6/ui/tui.py",
]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "needs_namespaces: requires unprivileged user namespaces (skipped in restrictive sandboxes)",
    "needs_landlock_tcp: requires Linux >=6.7 (Landlock ABI v4)",
    "needs_network: requires real Anthropic API key in ANTHROPIC_API_KEY",
]
