[project]
name = "agent6"
dynamic = ["version"]
description = "A coding agent that jails model commands and uses editable state machines for long-running tasks."
readme = "README.md"
urls = { "Homepage" = "https://agent6.dev", "Documentation" = "https://agent6.dev", "Source" = "https://github.com/agent6-dev/agent6" }
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Eric Lesiuta" }]
dependencies = [
    "argcomplete>=3,<4",
    "httpx2>=2.3",
    "pydantic>=2.7,<3",
    "ruff>=0.6,<1",  # runtime, not dev: lints the scripts `machine create` generates
    "textual>=0.86",  # the live dashboard; without it `--tui` falls back to the plain CLI stream
    "tree-sitter==0.25.2",
    "tree-sitter-language-pack==1.8.1",
    "ty>=0.0.46,<0.1",  # runtime: typechecks the scripts `machine create` generates
]

[project.scripts]
agent6 = "agent6.ui.cli:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/agent6/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agent6"]
# The jail binary is gitignored, so list it explicitly or hatchling drops it.
artifacts = ["src/agent6/sandbox/_bin/agent6-jail"]
# Ship the compiled binary, not the Rust crate it is built from.
exclude = ["src/agent6/jail"]

# Bundle the reference docs into the wheel (agent6/_docs/) for the agent6_docs
# tool. Sources are lowercase under docs/; they ship under uppercase names.
[tool.hatch.build.targets.wheel.force-include]
"README.md" = "agent6/_docs/README.md"
"AGENTS.md" = "agent6/_docs/AGENTS.md"
"docs/architecture.md" = "agent6/_docs/ARCHITECTURE.md"
"docs/config.md" = "agent6/_docs/CONFIG.md"
"docs/security.md" = "agent6/_docs/SECURITY.md"

# Compile agent6-jail during the wheel build and bundle it under
# agent6/sandbox/_bin/, so `uv sync` or `uv build` is self-contained with no
# separate cargo step. Without cargo the hook falls back to a pure-Python wheel
# (`agent6 check sandbox` then explains the missing binary). CI sets
# AGENT6_JAIL_TARGET=x86_64-unknown-linux-musl so the binary is static and runs
# on any glibc.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
# Ship the Rust crate sources (under src/agent6) so the jail can be built from
# the sdist; the binary and build dir are excluded below.
include = [
    "src/agent6",
    "hatch_build.py",
    "README.md",
    "AGENTS.md",
    "docs/architecture.md",
    "docs/config.md",
    "docs/security.md",
    "docs/state-machines.md",
    "tach.toml",
    "LICENSE",
]
# No built binary or Rust artifacts in the sdist; the hook rebuilds it.
exclude = [
    "src/agent6/sandbox/_bin",
    "src/agent6/jail/target",
]

[dependency-groups]
dev = [
    "pyan3>=2.6.2",
    "pyright>=1.1.380",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6,<1",
    "tach>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
# task repos under bench are AGENT-INPUT FIXTURES, some deliberately buggy;
# linting them would force noqa markers that annotate the seeded defects.
extend-exclude = ["bench/coreagent/tasks/*/repo"]

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle / pyflakes
    "I",                  # isort
    "B",                  # bugbear
    "UP",                 # pyupgrade
    "SIM",                # simplify
    "RUF",                # ruff-specific
    "TID",                # tidy imports
    "PL",                 # pylint subset
    "PTH",                # use pathlib
    "S",                  # bandit
]
ignore = [
    "PLR0913",  # too many args; fine in our typed APIs
    "S101",     # asserts allowed
    "S603",     # subprocess: we audit every call site
    "S607",     # subprocess partial path: we use absolute paths
    "PLR2004",  # magic-value comparisons; noisy in tests
]

[tool.ruff.lint.per-file-ignores]
# page.py composes embedded HTML asset strings; line length is meaningless there.
"src/agent6/ui/web/page.py" = ["E501"]
"tests/**" = ["S", "PLR2004", "PLR0915", "PLC0415", "B017"]
"bench/**" = ["S", "PLR0912", "PLR0915", "PLC0415", "PLW2901", "SIM105", "SIM114", "SIM115", "E501", "PTH"]
"docs/screenshots/keystroke_overlay.py" = ["PLR0912", "PLR1730"]
# web_demo.py embeds a block of cursor/animation JS as a string; line length is moot there.
"docs/screenshots/web_demo.py" = ["E501"]
# gen_contracts.py embeds the artifact's CSS/SVG/HTML as strings; line length is moot there.
"docs/gen_contracts.py" = ["E501"]

[tool.pyright]
include = ["src", "tests", "docs/gen_contracts.py"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

# cli/ is one CLI split across modules that share underscore-prefixed helpers.
# That cross-module sharing is the package's internal API, so the private-usage
# and unused-symbol checks (which assume `_name` is file-local) only add noise
# here; they stay strict everywhere else.
[[tool.pyright.executionEnvironments]]
root = "src/agent6/ui/cli"
reportPrivateUsage = false
reportUnusedFunction = false
reportUnusedClass = false

# The headless TUI tests poke internal seams (`_handle_event`, `_tick`) on
# purpose, so silence the private-usage check here only.
[[tool.pyright.executionEnvironments]]
root = "tests/tui"
reportPrivateUsage = false

[tool.pytest.ini_options]
testpaths = ["tests"]
# Import agent6 from the source tree directly, not via the editable install's
# .pth. The .pth encodes this checkout's absolute host path, which does not
# exist inside the jail (the repo is bind-mounted at /workspace), so an in-jail
# verify -- e.g. agent6 running its own suite while improving itself -- could not
# `import agent6`. pytest prepends <rootdir>/src, which resolves to /workspace/src
# in the jail and to this dir out of it: identical files either way, no dependency
# on where (or whether) an editable install points.
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "needs_namespaces: requires unprivileged user namespaces (skipped in restrictive sandboxes)",
    "needs_landlock_tcp: requires Linux >=6.7 (Landlock ABI v4)",
    "needs_network: requires real Anthropic API key in ANTHROPIC_API_KEY",
]
