[package]
name = "agent6-jail"
version = "0.1.0"
edition = "2021"
description = "Linux namespace + Landlock + seccomp launcher for agent6 child processes."
license = "Apache-2.0"

[[bin]]
name = "agent6-jail"
path = "src/main.rs"

[dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["sched", "mount", "process", "fs", "user", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
seccompiler = "0.4"
landlock = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
